# todoist-spoonies

./: .env.template  .gitignore  README.md  pyproject.toml
todoist-spoonies/: app.py  ids.py
todoist_spoonies/: app.py  records.py  scheduler.py  tg_bot_handlers.py  todoist_auth.py  todoist_notifs.py
